--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "version": "0.8",
+  "version": "0.9",
   "downloadLink": "https://raw.githubusercontent.com/UltimateSkidder/RLM-V-0.8/main/RML%20V%200.8.zip",
-  "updateNotes": "Version 0.8 Release\n- New features added\n- Bug fixes\n- Performance improvements",
-  "status": "active"
+  "updateNotes": "Version 0.9 Release\n- Stabilized Injector\n- 99% UNC and 100% SUNC",
+  "status": "update maintenance"
 }
